@@ -565,6 +565,9 @@ void StyleEngine::apply (int i, StyleAttrs *attrs, CssPropertyList *props) {
          case CSS_PROPERTY_TEXT_INDENT:
             computeLength (&attrs->textIndent, p->value.intVal, attrs->font);
             break;
+         case CSS_PROPERTY_TEXT_TRANSFORM:
+            attrs->textTransform = (TextTransform) p->value.intVal;
+            break;
          case CSS_PROPERTY_VERTICAL_ALIGN:
             attrs->valign = (VAlignType) p->value.intVal;
             break;
